# w2-football-intelligence-engine

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.migrations  Dockerfile.scheduler  Dockerfile.web  Dockerfile.worker  Makefile  NEXT_ACTION.md  PROJECT_LEDGER.md  PROJECT_STATE.yaml  README.md  alembic.ini  design-qa.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
apps/: __init__.py
config/: legacy_decision_allowlist.json
contracts/: ai_recommendation_card.v1.schema.json  ai_recommendation_input.v1.schema.json  ai_recommendation_output.v1.schema.json  w2_formal_tracking_report.v1.schema.json  w2_handicap_walkforward_report.v1.schema.json  w2_metric_catalog.v1.json  w2_pricing_shadow.v1.schema.json  w2_product_policy.v1.json  w2_state_machine.v1.json
docs/: DOCUMENT_AUTHORITY.md  W2_ACCEPTANCE_RUNBOOK.md  W2_HIBERNATE_WAKEUP_A160_WORKORDER.md  W2_HTML_DASHBOARD_V3_ACCEPTANCE_2026-07-03.md  W2_MASTER_ROADMAP.md  W2_NEXT_PHASE_EXECUTION_PLAN.md
infra/: Dockerfile.python  Dockerfile.web
migrations/: env.py  script.py.mako
reports/: W2_BASELIGHT_MCP_PROBE.json  W2_BASELIGHT_MCP_PROBE.md  W2_CI_BOOTSTRAP_PATCH1_RESULT.md  W2_CI_BOOTSTRAP_PATCH2_RESULT.md  W2_CURRENT_HANDOFF.md  W2_DEPLOY_DRIFT_AUDIT.md  W2_FUTURE_REFRESH_HARDENING_RESULT.md  W2_GATE0_LEGACY_CLOSURE_AUDIT.md  W2_GATE0_W1_ASSET_CLASSIFICATION.json  W2_GATE0_W1_SHA256_MANIFEST.json  W2_GATE3_BASELIGHT_AH_WALK_FORWARD.json  W2_GATE3_BASELIGHT_AH_WALK_FORWARD_RESULT.md  W2_GATE3_BASELIGHT_LIMITED_AH_EXTRACT_MANIFEST.json  (+162 more)
(+1507 files in other folders)
