[build-system]
requires = ["hatchling>=1.24,<2"]
build-backend = "hatchling.build"

[project]
name = "w2-football-intelligence-engine"
version = "0.2.0"
description = "W2 Stage 2 engineering foundation for football intelligence."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.13,<2",
  "celery>=5.4,<6",
  "fastapi>=0.115,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "redis>=5,<6",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.11,<2",
  "pre-commit>=3.8,<4",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "pyyaml>=6.0,<7",
  "ruff>=0.6,<1",
  "types-PyYAML>=6.0,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/w2"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "apps", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101", "S603", "S607"]

[tool.ruff.lint.per-file-ignores]
"scripts/check_w2_stage1_contracts.py" = ["E", "I"]
"scripts/render_ai_card_text.py" = ["E", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["src", "apps"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["celery.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["apps.worker.celery_app"]
disable_error_code = ["untyped-decorator"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = [".", "src"]
